ajout page podcast et contact

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="accueil.css">
     <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
@@ -23,7 +24,6 @@
             <a href="#contact">Nous contacter</a> 
         </div>
     </nav>
-    <main>
         <div class="container-contact">
             <div class="bloc1">
                 <div class="titre-contactez-nous">
@@ -71,7 +71,21 @@
         <div class="image-contact">
         </div>
     </div>
-    </main>
-    </main>
+    <footer>
+        <div id="footer">
+        <div class="div-footer1">
+            <p><a href="#apropos">À propos</a></p>
+            <p><a href="#mentions">Mentions légales</a></p>
+        </div>
+        <div class="div-footer2">
+            <p><a href="#politiques">Politique de confidentialité</a></p>
+            <p><a href="#conditions">Conditions d’utilisation</a></p>
+        </div>
+        <div class="div-footer3">
+            <p>Nous contacter</p>
+        </div>
+       </div>
+        <p>© 2024 .  L’observatoire des jeunesses et de l’engagement Tous droits réservés.</p>
+    </footer> 
 </body>
 </html>
