--- a/accueil.html
+++ b/accueil.html
@@ -21,8 +21,8 @@
                     <a href="#Association ">Découvrir notre mission</a>
                     <a href="#apropos">À propos</a>
                     <a href="#ressources">Nos ressources</a>
-                    <a href="#podcast">Podcast à venir</a>
-                    <a href="#contact">Nous contacter</a> 
+                    <a href="/podcast.html">Podcast à venir</a>
+                    <a href="/contact.html">Nous contacter</a> 
                 </div>
             </nav>
 
