--- a/podcast.html
+++ b/podcast.html
@@ -16,12 +16,17 @@
     </header>
 
     <nav class="nav" id="nav">
-        <div class="menu">
+        <div class="burger" id="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="menu" id="menu">
             <a href="#Association ">Découvrir notre mission</a>
             <a href="#apropos">À propos</a>
             <a href="#ressources">Nos ressources</a>
-            <a href="#podcast">Podcast à venir</a>
-            <a href="#contact">Nous contacter</a> 
+            <a href="./podcast.html">Podcast à venir</a>
+            <a href="./contact.html">Nous contacter</a>
         </div>
     </nav>
     <div class="video-background">
@@ -55,5 +60,7 @@
        </div>
         <p>© 2024 .  L’observatoire des jeunesses et de l’engagement Tous droits réservés.</p>
     </footer> 
+    
+    <script src="./accueil.js" defer></script>
 </body>
 </html>
