page ressources et appropos et association

--- a/sonia/ressources.html
+++ b/sonia/ressources.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="ressources.css" />
+    <link rel="stylesheet" href="/accueil.css">
     <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre+SemiBold:wght@600&display=swap" rel="stylesheet">
     <title>RESSOURCES</title>
   </head>
   <body>
+    <header>
+      <div></div>
+      <a href="./accueil.html"><img id="logo" src="./unnamed_004.png"  alt="logo"></a> 
+      <a href="./accueil.html"><p id="p-header">L'<span>Observatoire</span> <br> des Jeunesses et de l'Engagement</p></a>   
+  </header>
+
+  <nav class="nav" id="nav">
+      <div class="menu">
+          <a href="#Association ">Découvrir notre mission</a>
+          <a href="#apropos">À propos</a>
+          <a href="/sonia/ressources.html">Nos ressources</a>
+          <a href="#podcast">Podcast à venir</a>
+          <a href="#contact">Nous contacter</a> 
+      </div>
+  </nav>
     <div>
         <img
           id="imgresources"
@@ -59,5 +75,24 @@
          
       </div>
     </div>
+    <footer>
+      <div id="footer">
+        <div class="div-footer1">
+          <p><a href="#apropos">À propos</a></p>
+          <p><a href="#mentions">Mentions légales</a></p>
+        </div>
+        <div class="div-footer2">
+          <p><a href="#politiques">Politique de confidentialité</a></p>
+          <p><a href="#conditions">Conditions d’utilisation</a></p>
+        </div>
+        <div class="div-footer3">
+          <p>Nous contacter</p>
+        </div>
+      </div>
+      <p>
+        © 2024 . L’observatoire des jeunesses et de l’engagement Tous droits
+        réservés.
+      </p>
+    </footer>
   </body>
 </html>
