--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
             <a href="#Association ">Découvrir notre mission</a>
             <a href="#apropos">À propos</a>
             <a href="#ressources">Nos ressources</a>
-            <a href="#podcast">Podcast à venir</a>
-            <a href="#contact">Nous contacter</a> 
+            <a href="./podcast.html">Podcast à venir</a>
+            <a href="./contact.html">Nous contacter</a> 
         </div>
     </nav>
         <div class="container-contact">
@@ -53,6 +53,10 @@
                             </div>
                             <button class="button-primary-btn-contact">Envoyer</button>
                         </form>
+<div id="confirmation-message" style="display: none;" class="confirmation-box">
+    Votre message a bien été envoyé.
+</div>
+
                     </div>
                 </section>
             
@@ -87,5 +91,6 @@
        </div>
         <p>© 2024 .  L’observatoire des jeunesses et de l’engagement Tous droits réservés.</p>
     </footer> 
+    <script src="/script.js"></script>
 </body>
 </html>
