--- a/podcast.html
+++ b/podcast.html
@@ -20,13 +20,13 @@
             <a href="#Association ">Découvrir notre mission</a>
             <a href="#apropos">À propos</a>
             <a href="#ressources">Nos ressources</a>
-            <a href="#podcast">Podcast à venir</a>
-            <a href="#contact">Nous contacter</a> 
+            <a href="./podcast.html">Podcast à venir</a>
+            <a href="./contact.html">Nous contacter</a> 
         </div>
     </nav>
     <div class="video-background">
         <video autoplay loop muted playsinline>
-            <source src="../Images/video.mp4" type="video/mp4">
+            <source src="../EyeFaceHope-HACKATHON-/Images/video.mp4" type="video/mp4">
         </video>
         <div class="overlay-podcast">
             <h1>Ensemble, donnons voix au récit collectif !</h1>
