--- a/accueil.html
+++ b/accueil.html
@@ -18,11 +18,11 @@
 
             <nav class="nav" id="nav">
                 <div class="menu">
-                    <a href="#Association ">Découvrir notre mission</a>
+                    <a href="./ass">Découvrir notre mission</a>
                     <a href="#apropos">À propos</a>
                     <a href="#ressources">Nos ressources</a>
-                    <a href="/podcast.html">Podcast à venir</a>
-                    <a href="/contact.html">Nous contacter</a> 
+                    <a href="./podcast.html">Podcast à venir</a>
+                    <a href="./contact.html">Nous contacter</a> 
                 </div>
             </nav>
 
