--- a/apropos.html
+++ b/apropos.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="apropos.css" />
     <link rel="stylesheet" href="accueil.css" />
-    <link rel="stylesheet" href="association.css" />
-
-    <title>Document</title>
+    <title>apropos</title>
   </head>
   <body>
     <header>
@@ -39,53 +38,33 @@
         <a href="./contact.html">Nous contacter</a>
       </div>
     </nav>
-    <div class="association">
-      <div class="titreassociation">
-        <h1>Qui sommes-nous?</h1>
+    <div>
+      <div class="apro">
+        <h1> Un mot de la fondatrice</h1>
       </div>
-      <div class="textassociation">
-        <p>
-          Mission : <br />
-          Nous valorisons les engagements des jeunesses françaises et
-          collaborons avec les acteurs déjà investis pour amplifier leur impact
-          collectif. Nous croyons en une France unie et inclusive, où chaque
-          jeune peut contribuer avec fierté.
-        </p>
-        <div class="imgassociation">
-          <img src="./liliaetcopines.png" alt="" />
+      <div class="liliapropos">
+        <div>
+          <p>
+            Je suis Lilia TOUll. diplômée d'un double master en droit et issue
+            d'un quartier populaire. L'engagement n'a permis de comprendre non
+            rôle citoyen et d’agir concrètement pour les causes qui me tiennent
+            à cœur.
+          </p>
+        </div>
+        <div class="aprops">
+          <img src="./imglilia.jpg" alt="photo dela fondatrice Lilia TOUIL" />
         </div>
       </div>
-
-      <div class="tissociation">
-        <h1>Notre objectif</h1>
+      <div class="macron"><img src="./macron.jpg" alt="" /></div>
+      <div class="textmacron">
+        Forte de mon expérience en tant que Jeune leader engagée au niveau
+        national et international, J'ai créé l'Observatoire des Jeunesses et de
+        l'Engagement pour visibiliser les actions des jeunesses françaises et
+        les accompagner dans leur engagement pour la justice sociale, l'égalité
+        et la justice climatique.
       </div>
-      <div class="vegetable">
-        <img src="./terre.jpg" alt="image de la terre" />
-        <div class="listil">
-          <li>Mettre en lumière les initiatives jeunes</li>
-
-          <li>Créer des espaces d’expression et de dialogue</li>
-
-          <li>Favoriser des partenariats pour renforcer l’impact citoyen</li>
-        </div>
-      </div>
-
-      <div class="textterre">
-        <h1>Les projets à venir</h1>
-      </div>
-      <div class="liassouci">
-        <ul>
-          <li>Ateliers citoyens pour sensibiliser et mobiliser</li>
-
-          <li>Podcasts pour amplifier les voix des jeunes engagés</li>
-
-          <li>
-            Rapports et événements autour de la justice sociale et de l’égalité
-          </li>
-        </ul>
-        <div class="imgassos">
-          <img src="./réunion.jpg" alt="" />
-        </div>
+      <div class="unesco">
+        <img src="./unesco.jpg" alt="photo de Lilia TAOUIL " />
       </div>
     </div>
     <footer>
