--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             <span></span>
         </div>
         <div class="menu" id="menu">
-            <a href="#Association ">Découvrir notre mission</a>
-            <a href="#apropos">À propos</a>
-            <a href="#ressources">Nos ressources</a>
+            <a href="./association.html">Découvrir notre mission</a>
+            <a href="./apropos.html">À propos</a>
+            <a href="./ressources.html">Nos ressources</a>
             <a href="./podcast.html">Podcast à venir</a>
             <a href="./contact.html">Nous contacter</a>
         </div>
