--- a/ressources.html
+++ b/ressources.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="ressources.css" />
     <link rel="stylesheet" href="/accueil.css">
-    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre+SemiBold:wght@600&display=swap" rel="stylesheet">
     <title>RESSOURCES</title>
   </head>
   <body>
@@ -17,11 +16,11 @@
 
   <nav class="nav" id="nav">
       <div class="menu">
-          <a href="#Association ">Découvrir notre mission</a>
-          <a href="#apropos">À propos</a>
-          <a href="/sonia/ressources.html">Nos ressources</a>
-          <a href="#podcast">Podcast à venir</a>
-          <a href="#contact">Nous contacter</a> 
+          <a href="./association.html">Découvrir notre mission</a>
+          <a href="./apropos.html">À propos</a>
+          <a href="/ressources.html">Nos ressources</a>
+          <a href="./podcast.html">Podcast à venir</a>
+          <a href="./contact.html">Nous contacter</a> 
       </div>
   </nav>
     <div>
