--- a/ressources.html
+++ b/ressources.html
@@ -50,13 +50,13 @@
         <div
         class="content"><p>Un podcast de l’association Rêv’Elles, régulièrement co-animé par notre  fondatrice et d’autres alumnae, qui donne la parole aux jeunes femmes  des quartiers populaires pour partager leurs récits et engagements.</p></div>
         <div class="button-contribution">
-            <a href="./podcast lilia touile.htm" class="button">Découvrez leurs récits ici</a>
+            <a href="./revcast (3).mov" class="button">Découvrez leurs récits ici</a>
         </div>
         </div>
         <div class="contents">
            <div class="textcontents"> <p>Un rapport co-rédigé par notre fondatrice, en charge du pôle  sensibilisation jeunesse, avec les jeunes de l’ONG ONE, et remis au  ministère de l’Europe et des Affaires étrangères.</p>
             <div class="button-contents">
-                <a href="">Lisez le rapport ici.</a>
+                <a href="https://www.one.org/fr/policy/rapport-sensibilisation-objectifs-developpement-durable/">Lisez le rapport ici.</a>
             </div>
            </div>
            
